<resources>
    <string name="app_name">MyRuns</string>
    <!--    Profile strings-->
    <string name="profile_photo">Profile photo:</string>
    <string name="photo_desc">Capybara in a hat</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="name_hint">Your name here</string>
    <string name="email">Email:</string>
    <string name="email_hint">Your email here</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">Your phone here</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="grad_class">Class</string>
    <string name="grad_class_hint">e.g. 2025</string>
    <string name="major">Major</string>
    <string name="major_hint">Your major here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="camera">Take from camera</string>
    <string name="gallery">Select from gallery </string>
    <!--    Settings strings-->
    <string name="account_prefs">Account Preferences</string>
    <string name="user_profile">User Profile</string>
    <string name="list_settings">Name, Email, Class, etc</string>
    <string name="privacy_setting">Privacy setting</string>
    <string name="post_records">"Posting your records anonymously</string>
    <string name="additional_settings">Additional settings</string>
    <string name="unit_pref">Unit Preference</string>
    <string name="unit_pref_detail">Select the units in which you would like to see distance values</string>
    <string name="comment">Comment</string>
    <string name="suggestion">Any suggestion to this course?</string>
    <string name="misc">Misc.</string>
    <string name="class_page">Class homepage</string>
    <string name="class_page_url">https://www.sfu.ca/fas/computing.html</string>
    <string name="metric">Metric (Kilometers)</string>
    <string name="imperial">Imperial (Miles)</string>

    <!-- Start Tab strings -->
    <string name="input_type">Input Type:</string>
    <string name="activity_type">Activity Type:</string>
    <string-array name="input_array">
        <item>Manual</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activity_array">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Others</item>
        <item>Ultimate Frisbee</item>
        <item>Pickleball</item>
        <item>Swim</item>
        <item>Strength</item>
        <item>Bike</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Volleyball</item>
        <item>Golf</item>
        <item>Standup Paddleboard</item>
    </string-array>
    <string name="start">Start</string>

</resources>